<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_200"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="?attr/actionBarSize"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray_200"
            android:padding="10dp">

            <com.kofigyan.stateprogressbar.StateProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:spb_checkStateCompleted="true"
                app:spb_currentStateDescriptionColor="#009688"
                app:spb_currentStateNumber="two"
                app:spb_maxStateNumber="three"
                app:spb_stateBackgroundColor="@color/gray_500"
                app:spb_stateDescriptionColor="@color/app_blue"
                app:spb_stateForegroundColor="@color/app_blue"
                app:spb_stateLineThickness="2px"
                app:spb_stateNumberBackgroundColor="@color/app_blue"
                app:spb_stateNumberForegroundColor="@color/gray_50" />

        </FrameLayout>

        <!--<FrameLayout-->
        <!--android:id="@+id/flJobTitleContainer"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"></FrameLayout>-->

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardBackgroundColor="@color/white"
            app:contentPadding="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="16dp"
                android:paddingTop="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <com.app.workingbeez.widgets.DTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/msg_experience" />

                    <com.app.workingbeez.widgets.DTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="@string/app_name" />

                </LinearLayout>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <com.rey.material.widget.RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/hint_yes" />

                    <com.rey.material.widget.RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="24dp"
                        android:gravity="center"
                        android:text="@string/hint_no" />

                </RadioGroup>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/gray_300"
        android:padding="10dp">

        <FrameLayout
            android:id="@+id/flBottomBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:foreground="?attr/selectableItemBackground"
            android:padding="8dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_back" />

        </FrameLayout>

        <com.kofigyan.stateprogressbar.StateProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:paddingLeft="50dp"
            android:paddingRight="10dp"
            app:spb_checkStateCompleted="true"
            app:spb_currentStateDescriptionColor="#009688"
            app:spb_currentStateNumber="five"
            app:spb_maxStateNumber="five"
            app:spb_stateBackgroundColor="@color/gray_500"
            app:spb_stateDescriptionColor="@color/app_blue"
            app:spb_stateForegroundColor="@color/app_blue"
            app:spb_stateLineThickness="2px"
            app:spb_stateNumberBackgroundColor="@color/app_blue"
            app:spb_stateNumberForegroundColor="@color/gray_50" />

        <FrameLayout
            android:id="@+id/flNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:foreground="?attr/selectableItemBackground"
            android:padding="8dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_next" />

        </FrameLayout>

    </FrameLayout>

</FrameLayout>